--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,11 @@ export(effort_initialize)
 export(effort_merge)
 export(effort_redistribute)
 export(effort_summary)
+export(figure_add)
+export(figure_barPlot)
 export(figure_detectAllPoints)
 export(figure_detectAxis)
+export(figure_display)
 export(figure_displayDetectedPoints)
 export(figure_displayDetections)
 export(figure_extractDetectedPoints)
@@ -46,6 +49,8 @@ importFrom(EBImage,display)
 importFrom(EBImage,distmap)
 importFrom(EBImage,drawCircle)
 importFrom(EBImage,fillHull)
+importFrom(EBImage,flip)
+importFrom(EBImage,flop)
 importFrom(EBImage,hist)
 importFrom(EBImage,imageData)
 importFrom(EBImage,makeBrush)
@@ -54,11 +59,31 @@ importFrom(EBImage,openingGreyScale)
 importFrom(EBImage,paintObjects)
 importFrom(EBImage,readImage)
 importFrom(EBImage,rmObjects)
+importFrom(EBImage,transpose)
 importFrom(EBImage,watershed)
 importFrom(EBImage,writeImage)
 importFrom(MASS,mvrnorm)
+importFrom(grDevices,col2rgb)
+importFrom(grDevices,rgb)
 importFrom(metafor,rma)
+importFrom(stats,addmargins)
+importFrom(stats,anova)
+importFrom(stats,as.formula)
+importFrom(stats,cor)
 importFrom(stats,lm)
+importFrom(stats,pchisq)
+importFrom(stats,pnorm)
+importFrom(stats,qpois)
+importFrom(stats,qt)
 importFrom(stats,rbinom)
+importFrom(stats,rlnorm)
 importFrom(stats,rmultinom)
+importFrom(stats,rnbinom)
+importFrom(stats,rnorm)
+importFrom(stats,rpois)
+importFrom(stats,sd)
 importFrom(stringr,str_extract)
+importFrom(utils,browseURL)
+importFrom(utils,download.file)
+importFrom(utils,read.csv)
+importFrom(utils,write.csv)
